[gd_scene load_steps=5 format=3 uid="uid://xbjx6iagurlb"]

[ext_resource type="Script" path="res://TopDownShooter/TopDownShooter/Scenes/main_menu.gd" id="1_1h8pp"]
[ext_resource type="Texture2D" uid="uid://cllpjyv8j55u" path="res://TopDownShooter/TopDownShooter/Sprites/foodImage3.jpg" id="2_it1b1"]
[ext_resource type="AudioStream" uid="uid://bkda1yl17tk30" path="res://TopDownShooter/TopDownShooter/items/winner-award-156892.mp3" id="3_i53gl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhdto"]
bg_color = Color(0, 0, 0, 1)

[node name="WinMenu" type="CanvasLayer"]
script = ExtResource("1_1h8pp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.359726, 0.273643, 0.288236, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
texture = ExtResource("2_it1b1")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "You have won"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="PlayButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_xhdto")
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="MainMenuButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_xhdto")
text = "Back to main menu
"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="QuitButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_xhdto")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i53gl")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
