[gd_scene load_steps=7 format=3 uid="uid://0oj0nrxj6yjw"]

[ext_resource type="Script" path="res://TopDownShooter/TopDownShooter/Scenes/main_menu.gd" id="1_4vi4v"]
[ext_resource type="Texture2D" uid="uid://df4yhwhehooxo" path="res://TopDownShooter/TopDownShooter/Sprites/foodImage2.jpg" id="2_lvec7"]
[ext_resource type="AudioStream" uid="uid://d22f5xbkd5ds8" path="res://TopDownShooter/TopDownShooter/items/risk-136788.mp3" id="3_615vw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aeopr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlwt8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrqcb"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_4vi4v")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.27451, 0.290196, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
layout_mode = 2
texture = ExtResource("2_lvec7")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/outline_size = 27
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_aeopr")
text = "Wellness Warriors: 
Battling The Temptations"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="PlayButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nlwt8")
text = "Play"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="tutorialButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nlwt8")
text = "Introduction/Tutorial
"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="optionButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_mrqcb")
text = "Options
"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="quitButton" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 10.89
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_mrqcb")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_615vw")
autoplay = true

[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer4/tutorialButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer2/optionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/MarginContainer3/quitButton" to="." method="_on_quit_button_pressed"]
